--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "tsc && node index.js"
   },
+  "type": "module",
   "dependencies": {
     "@coinbase/agentkit": "^0.1.0",
     "@coinbase/agentkit-langchain": "^0.1.0",
@@ -18,6 +19,7 @@
     "@langchain/ollama": "^0.1.5",
     "@langchain/openai": "^0.3.14",
     "axios": "^1.7.9",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
     "langchain": "^0.3.14",
